--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "nanoid": "^5.0.7",
+    "persistor": "^2.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
